<resources>

    <string name="app_name">DrinkCaptain</string>
    <string name="sTime"></string>
    <string name="sProduct1">Product1</string>
    <string name="sProduct2">Product2</string>
    <string name="sProduct3">Product3</string>
    <string name="sProduct4">Product4</string>
    <string name="sProduct5">Product5</string>
    <string name="sProduct6">Product6</string>
    <string name="sUnknown">unknown</string>
    <string name="sMood">Wine Down</string>
    <string name="sWineDown">Wine Down</string>
    <string name="sBadDay">Bad Day</string>
    <string name="sCelebration">Celebration</string>
    <string name="sTasteOfItaly">Taste Of Italy</string>
    <string name="sGetTogether">Get Together</string>
    <string name="sSummerBBQ">Summer BBQ</string>
    <string name="sGirlsNight">Girls Night</string>
    <string name="sSurpriseMe">Surprise Me</string>
    <string name="sGameNight">Game Night</string>
    <string name="sSearch">Search</string>
    <string name="sDescription">The only thing worth paying attention to other than your significant other</string>
    <string name="sName">Name</string>
    <string name="sFrance">France</string>
    <string name="sVolume">750ml</string>
    <string name="sQuantity">Quantity:</string>
    <string name="sPrice">Price</string>
    <string name="sV">Volume</string>
    <string name="s$40">$40</string>
    <string name="s20">20</string>
    <string name="sCAD">CAD</string>
    <string name="s1">1</string>
    <string name="sAdd">Add</string>
    <string name="sTax">TAX</string>
    <string name="s25.99">25.99</string>
    <string name="sShipping">SHIPPING</string>
    <string name="sAddress">12 University Ave\nToronto, ON\nM1B 1A4</string>
    <string name="sPayment">Card Ending in 0000\n exp 10/2008 \n Arya Stack</string>
    <string name="sBilling">12 University Ave\nToronto, ON\nM1B 1A4</string>
    <string name="s10.99">10.99</string>
    <string name="sTotal">TOTAL</string>
    <string name="s175.68">175.68</string>
    <string name="sCheckOut">Check out</string>
    <string name="sMinus">-</string>
    <string name="sOpen">Open</string>
    <string name="sClose">Close</string>
    <string name="sEdit">Edit</string>

    <string-array name="aDrawerList">
        <item>Bartender</item>
        <item>Favourites</item>
        <item>Search</item>
        <item>Settings</item>
    </string-array>
    <string-array name="aDays">
        <item>Weekend</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
    </string-array>
    <string-array name="aTimes">
        <item>morning</item>
        <item>afternoon</item>
        <item>night</item>
    </string-array>
    <string-array name="aTileBgs">
        <item>@drawable/bg_day4</item>
        <item>@drawable/bg_day1</item>
        <item>@drawable/bg_day2</item>
        <item>@drawable/bg_day1</item>
        <item>@drawable/bg_day3</item>
    </string-array>

    <array name="aDescrptionMoods">
        <item>Great drinks to help you unwind from your busy day</item> <!-- 0 -->
        <item>Good Drinks for Bad Days</item> <!-- 1 -->
        <item>Great drinks worth celebrating with</item> <!-- 2 -->
        <item>Discover what Italy has to offer</item> <!-- 3 -->
        <item>The only thing worth paying attention to other than your significant other</item> <!-- 4 -->
        <item>Rock your party with the perfect drinks</item> <!-- 5 -->
        <item>Refreshing and crisp drinks that are sure to be a hit</item> <!-- 6 -->
        <item>And you thought the night couldn\'t get any better...t</item> <!-- 7 -->
        <item>They say the perfect drink is a girl\'s best friend</item> <!-- 8 -->
        <item>No</item> <!-- 9 -->
    </array>
    <array name="aCategoryMoods">
        <item>@drawable/winedown</item> <!-- 0 -->
        <item>@drawable/badday</item> <!-- 1 -->
        <item>@drawable/celebration</item> <!-- 2 -->
        <item>@drawable/tasteofitaly</item> <!-- 3 -->
        <item>@drawable/favourites</item> <!-- 4 -->
        <item>@drawable/gettogether</item> <!-- 5 -->
        <item>@drawable/summerbbq</item> <!-- 6 -->
        <item>@drawable/gamenight</item> <!-- 7 -->
        <item>@drawable/girlsnight</item> <!-- 8 -->
        <item>@drawable/surpriseme</item> <!-- 9 -->
    </array>
    <array name="aProductCategoryMoods">
        <item>@array/aWineDowns</item>
        <item>@array/aBadDays</item>
        <item>@array/aCelebrations</item>
        <item>@array/aTasteOfItalys</item>
        <item>@array/aFavourites</item>
        <item>@array/aGetTogethers</item>
        <item>@array/aSummerBBQs</item>
        <item>@array/aGameNights</item>
        <item>@array/aGirlsNights</item>
        <item>@array/aSurpriseMe</item>
    </array>

    <string-array name="aDayMoods">
        <item>@array/aWeekendMoods</item>
        <item>@array/aMondayMoods</item>
        <item>@array/aTuedayMoods</item>
        <item>@array/aWednesdayMoods</item>
        <item>@array/aThursdayMoods</item>
    </string-array>
    <string-array name="aStringCategoryMoods">
        <item>Wine Down</item> <!-- 0 -->
        <item>Bad Day</item> <!-- 1 -->
        <item>Celebration</item> <!-- 2 -->
        <item>Taste Of Italy</item> <!-- 3 -->
        <item>Favourites</item> <!-- 4 -->
        <item>Get Together</item> <!-- 5 -->
        <item>Summer BBQ</item> <!-- 6 -->
        <item>Game Night</item> <!-- 7 -->
        <item>Girls Night</item> <!-- 8 -->
        <item>Surprise Me</item> <!-- 9 -->

    </string-array>
    <string-array name="aMerchantIds">
        <item>72313</item> <!-- 0 -->
        <item>56964_71105</item> <!-- 1 -->
        <item>72501_62071</item> <!-- 2 -->
        <item>75122</item> <!-- 3 -->
        <item>75032</item> <!-- 4 -->
        <item>71593</item> <!-- 5 -->
        <item>73227</item> <!-- 6 -->
        <item>72167</item> <!-- 7 -->
        <item>72167</item> <!-- 8 -->
        <item>72167</item> <!-- 9 -->
    </string-array>

    <integer-array name="aWeekendMoods">
        <item>2</item>
        <item>6</item>
        <item>0</item>
        <item>3</item>
        <item>8</item>
        <item>7</item>
    </integer-array>
    <integer-array name="aMondayMoods">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>9</item>
        <item>4</item>
    </integer-array>
    <integer-array name="aTuedayMoods">
        <item>0</item>
        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>9</item>
        <item>4</item>
    </integer-array>
    <integer-array name="aWednesdayMoods">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>9</item>
        <item>5</item>
    </integer-array>
    <integer-array name="aThursdayMoods">
        <item>2</item>
        <item>0</item>
        <item>8</item>
        <item>3</item>
        <item>1</item>
        <item>7</item>
    </integer-array>

    <string-array name="aWineDowns">
        <item>Don Q Cristal Silver Rum - 1 Liter</item>
        <item>Dewars White Label - 1 Liter</item>
        <item>Jack Daniels - 1 Liter</item>
        <item>Beefeater Gin - 750ml</item>
        <item>Jameson Irish Whiskey - 1 Liter</item>
        <item>Bacardi Silver Rum - 1.75 Liter</item>
    </string-array>
    <string-array name="aBadDays">
        <item>Jose Cuervo Especial Tequila, Gold (1 lt)</item>
        <item>Taittinger Brut Champagne - 750ml</item>
        <item>Crown Royal Whiskey, Canadian (1 lt)</item>
        <item>Jim Beam Kentucky Straight Bourbon Whiskey, Sour Mash (1 lt)</item>
        <item>Bombay Dry Gin - 1 Liter</item>
        <item>Sandeman LBV Porto - 750ml</item>
    </string-array>
    <string-array name="aCelebrations">
        <item>Grey Goose Pear Vodka - 750ml</item>
        <item>Fay Ca Morei Valtellina Superiore - 750ml</item>
        <item>Gruet Brut NV - 750ml</item>
        <item>Casalnova Prosecco - 750ml</item>
        <item>Carmel Road Pinot Noir - 750ml</item>
        <item>Jordan Cabernet Sauvignon - 750ml</item>
    </string-array>
    <string-array name="aTasteOfItalys">
        <item>Fontezoppa 2009 Falcotto - 750ml</item>
        <item>Fontodi 2009 Pinot Noir Case Vi - 750ml</item>
        <item>Pelissero 2008 Barbaresco Vanot - 750ml</item>
        <item>Barberani Polvento, Villa Monti - 750ml</item>
        <item>Vajra 2008 Bricco Viole - 750ml</item>
        <item>Brigaldara 2008 Amarone Classic - 750ml</item>
    </string-array>
    <string-array name="aFavourites">
        <item>Chateau Boutisse St Emillion G C 2009 \- 750ml</item>
        <item>Chateau Partarrieu Sauternes - 750ml</item>
        <item>Lillet White</item>
        <item>Chandon Brut Rose</item>
        <item>Gadea Dulce Malaga - 500ml</item>
        <item>Bellini Vin Santo Del Chianti - 500ml</item>
    </string-array>
    <string-array name="aGetTogethers">
        <item>Bertrand Cremant de Limoux Rose 2010</item>
        <item>Brinley\'s Shipwreck Coconut Rum - 750ml</item>
        <item>Charles de Monrency Champagne Brut Reserve</item>
        <item>Vigneau Sparkling Vouvray Brut NV</item>
        <item>Blandy\'s Alvada Madeira NV</item>
        <item>Absolut Vodka - 1 Liter</item>
    </string-array>
    <string-array name="aSummerBBQs">
        <item>Bud Light Beer - 18-Pack (12 oz. Cans)</item>
        <item>Dewars White Label</item>
        <item>Jack Daniels - 1 Liter</item>
        <item>Beefeater Gin</item>
        <item>Jameson Irish Whiskey</item>
        <item>Bacardi Silver Rum - 1.75 Liter</item>
    </string-array>
    <string-array name="aGameNights">
        <item>Coors Light</item>
        <item>Dewars White Label</item>
        <item>Jack Daniels - 1 Liter</item>
        <item>Beefeater Gin</item>
        <item>Jameson Irish Whiskey</item>
        <item>Bacardi Silver Rum - 1.75 Liter</item>
    </string-array>
    <string-array name="aGirlsNights">
        <item>Pisani Prosecco - 750ML</item>
        <item>Dolin Red - 750ML</item>
        <item>M &amp; R Rose Spumante - 750ML</item>
        <item>Gruet Blanc De Noirs - 750ML</item>
        <item>Savory &amp; James Cream Sherry - 750ML</item>
        <item>Presidential Porto Ruby - 750ML</item>
    </string-array>
    <string-array name="aSurpriseMe"></string-array>

</resources>