<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/listview_product"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="163"
        android:background="@drawable/wine" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="221" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/sFrance"
            android:textColor="@color/listview_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="12dp"
            android:text="@string/sVolume"
            android:textColor="@color/listview_volume"
            android:textSize="12sp" />

        <!-- <Button -->
        <!-- android:id="@+id/ibMinus" -->
        <!-- android:layout_width="31dp" -->
        <!-- android:layout_height="31dp" -->
        <!-- android:layout_below="@+id/tvVolume" -->
        <!-- android:layout_marginTop="12dp" -->
        <!-- android:layout_toLeftOf="@+id/ibQuantity" -->
        <!-- android:background="@drawable/quantity_minus" /> -->


        <!-- <Button -->
        <!-- android:id="@+id/ibQuantity" -->
        <!-- android:layout_width="31dp" -->
        <!-- android:layout_height="31dp" -->
        <!-- android:layout_alignTop="@+id/ibMinus" -->
        <!-- android:layout_toRightOf="@+id/tvVolume" -->
        <!-- android:background="@drawable/quantity_bg" -->
        <!-- android:text="@string/s1" -->
        <!-- android:textColor="@color/listview_quantity_tv" -->
        <!-- android:textSize="14sp" /> -->


        <!-- <Button -->
        <!-- android:id="@+id/ibPlus" -->
        <!-- android:layout_width="31dp" -->
        <!-- android:layout_height="31dp" -->
        <!-- android:layout_alignTop="@+id/ibQuantity" -->
        <!-- android:layout_toRightOf="@+id/ibQuantity" -->
        <!-- android:background="@drawable/quantity_plus" /> -->

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="10dp"
            android:text="@string/s$40"
            android:textColor="@color/listview_price"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvQuanty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvVolume"
            android:layout_centerVertical="true"
            android:text="@string/s1"
            android:textColor="@color/listview_volume"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>